colocando o ico e criando outras paginas css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
-
+    <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/keyframes.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
   </head>
 
   <body>
