--- a/gallery.html
+++ b/gallery.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
+    <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/keyframes.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
   </head>
   <body>
     <header>
       <div class="container">
-        <!-- botao utilizado para abrir menu em dispositivos resolucao menor -->
-
         <!-- logo do site -->
         <div id="container-header">
           <a id="logo" href="./index.html">
