--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<!-- doctype do HTML5 -->
 <html>
   <head>
-    <title>Floresce</title>
-
-    <!-- Importante para habilitar os recursos de Responsividade em conjunto com o CSS -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <title>Floresce</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/keyframes.css" />
@@ -36,9 +31,7 @@
         <!-- fim menu -->
       </div>
     </header>
-    <!-- Fim da barra de navegação -->
 
-    <!-- Cria area principal de marketing de um site -->
     <main>
       <div id="development">
         <img src="./img/banner.jpg" alt="" />
@@ -54,8 +47,6 @@
       </div>
 
       <div id="about">
-        <!-- container -->
-        <!-- Criação de colunas -->
         <div><img id="galho" src="./img/galho2.png" alt="" /></div>
 
         <article id="values">
@@ -109,6 +100,5 @@
       </ul>
       <p>&copy;2022- Todos direitos reservados</p>
     </footer>
-    <!-- /container -->
   </body>
 </html>
