--- a/gallery.html
+++ b/gallery.html
@@ -37,9 +37,8 @@
           Não compre amanhã o que você pode comprar bem mais barato na
           <span>black friday</span>
         </p>
-        <p></p>
-        <div id="photos">
-          <article>
+        <section id="photos">
+          <div>
             <img
               src="./img/foto1.png"
               alt="imagem de um boquê de flores do campo"
@@ -47,8 +46,8 @@
             <h5>Buquê de Flores do Campo Grande</h5>
             <h3>R$ 159,99</h3>
             <h2>R$ 119,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto2.png"
               alt="imagem de um boquê de 12 rosas vermelhas"
@@ -56,8 +55,8 @@
             <h5>Buquê de 12 Rosas Vermelhas</h5>
             <h3>R$ 139,99</h3>
             <h2>R$ 109,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto3.png"
               alt="imagem um boquê de 10 rosas vermelhas"
@@ -65,8 +64,8 @@
             <h5>Buquê de 10 Rosas Vermelhas</h5>
             <h3>R$ 129,99</h3>
             <h2>R$ 99,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto4.png"
               alt="imagem de uma Orquídea Phalaenopsis "
@@ -74,8 +73,8 @@
             <h5>Orquídea Phalaenopsis pink</h5>
             <h3>R$ 219,99</h3>
             <h2>R$ 189,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto5.png"
               alt="imagem de um Arranjo de 20 Rosas Rosadas"
@@ -83,8 +82,8 @@
             <h5>Arranjo de 20 Rosas Rosadas</h5>
             <h3>R$ 199,99</h3>
             <h2>R$ 169,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto6.png"
               alt="imagem de um Boquê de 6 Rosas e Chocolate"
@@ -92,14 +91,14 @@
             <h5>Buquê de 6 Rosas e Chocolate</h5>
             <h3>R$ 149,99</h3>
             <h2>R$ 99,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img src="./img/foto7.png" alt="imagem de um Boquê de 20 Rosas" />
             <h5>Buquê de 20 Rosas</h5>
             <h3>R$ 149,99</h3>
             <h2>R$ 89,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto8.png"
               alt="imagem de um Boquê de Flores do Campo"
@@ -107,8 +106,8 @@
             <h5>Buquê de Flores do Campo</h5>
             <h3>R$ 129,99</h3>
             <h2>R$ 79,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto9.png"
               alt="imagem de um Boquê de 6 Rosas Vermelhas"
@@ -116,8 +115,8 @@
             <h5>Buquê de 6 Rosas Vermelhas</h5>
             <h3>R$ 119,99</h3>
             <h2>R$ 69,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto10.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -125,8 +124,8 @@
             <h5>Cesta de Lirios, Gerberas Brancas</h5>
             <h3>R$ 189,99</h3>
             <h2>R$ 139,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto11.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -134,8 +133,8 @@
             <h5>Ramalhetes de Flores do Campo</h5>
             <h3>R$ 219,99</h3>
             <h2>R$ 189,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto12.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -143,8 +142,8 @@
             <h5>Buquê grande de Flores</h5>
             <h3>R$ 59,99</h3>
             <h2>R$ 39,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto13.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -152,8 +151,8 @@
             <h5>Boquê de 5 rosas</h5>
             <h3>R$ 39,99</h3>
             <h2>R$ 19,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto14.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -161,8 +160,8 @@
             <h5>Boquê de Astromélias</h5>
             <h3>R$ 59,99</h3>
             <h2>R$ 29,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto15.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -170,8 +169,8 @@
             <h5>Boquê de Girassóis</h5>
             <h3>R$ 69,99</h3>
             <h2>R$ 39,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto16.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -179,8 +178,8 @@
             <h5>Boquê com 26 Rosas de 3 Cores</h5>
             <h3>R$ 119,99</h3>
             <h2>R$ 89,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto17.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -188,8 +187,8 @@
             <h5>Boquê com 16 Rosas de 4 Cores</h5>
             <h3>R$ 99,99</h3>
             <h2>R$ 79,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto18.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -197,8 +196,8 @@
             <h5>Boquê de 7 Rosas Rosadas</h5>
             <h3>R$ 59,99</h3>
             <h2>R$ 39,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto19.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -206,8 +205,8 @@
             <h5>Cesta de Flores do Campo</h5>
             <h3>R$ 139,99</h3>
             <h2>R$ 99,99</h2>
-          </article>
-          <article>
+          </div>
+          <div>
             <img
               src="./img/foto20.png"
               alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
@@ -215,8 +214,8 @@
             <h5>Arranjo de Lirios</h5>
             <h3>R$ 89,99</h3>
             <h2>R$ 59,99</h2>
-          </article>
-        </div>
+          </div>
+        </section>
       </div>
     </div>
     <footer>
