mudanca css e inserindo info no alt da img

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Floresce</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0" />
+    <title>Quintal das Flores</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/keyframes.css" />
@@ -17,9 +17,10 @@
         <!-- logo do site -->
         <div id="container-header">
           <a id="logo" href="./index.html">
-            <img src="./img/logo.png" alt="" />
+            <img src="./img/logo.png" alt="Logo" />
           </a>
 
+          <h2>Quintal das Flores</h2>
           <!-- inicio menu -->
           <nav id="nav-header">
             <ul>
@@ -34,26 +35,26 @@
 
     <main>
       <div id="development">
-        <img src="./img/banner.jpg" alt="" />
+        <img src="./img/banner.jpg" alt="banner - fachada da floricultura" />
         <article>
           <h1>Qual o nosso diferencial?</h1>
           <p>
-            A Lis Flores é uma floricultura com mais de 5 anos de experiência no
+            A Quintal das Flores é uma floricultura com mais de 5 anos de experiência no
             mercado de flores. Com grande excelência no cultivo e manuseio, a
-            Lis Flores é uma empresa especializada no plantio, desenvolvimento e
+            Quintal das Flores é uma empresa especializada no plantio, desenvolvimento e
             comercialização das melhores e até mais raras flores do mercado.
           </p>
         </article>
       </div>
 
       <div id="about">
-        <div><img id="galho" src="./img/galho2.png" alt="" /></div>
+        <div><img id="galho" src="./img/galho2.png" alt="ramo de flor" /></div>
 
         <article id="values">
           <h2>Nossos Valores</h2>
           <p>
             Com grande experiência no cultivo e desenvolvimento de novas
-            tecnologias na área do plantio a Lis Flores é uma empresa
+            tecnologias na área do plantio a Quintal das Flores é uma empresa
             especializada no desenvolvimento e comercialização de todos os tipos
             de flores.
           </p>
@@ -69,7 +70,7 @@
             satisfação total ao adquirir cada produto. Flores para: Decoração de
             interiores, áreas externas, cultivo, ambientação e revenda.
           </p>
-          <img src="./img/objetivos.png" alt="" />
+          <img src="./img/objetivos.png" alt="notebook com flores ao lado" />
         </article>
         <article id="promotions">
           <h2>Promoções</h2>
@@ -77,25 +78,25 @@
             - Todo o site em <span>BLACK FRIDAY</span> <br />- Diversas opções a
             pronta entrega <br />- Buquês <br />- Arranjos <br />- Cestas
           </p>
-          <img src="./img/promocao.png" alt="" />
+          <img src="./img/promocao.png" alt="promoção" />
         </article>
-        <img id="ramo" src="./img/galho.png" alt="" />
+        <img id="ramo" src="./img/galho.png" alt="galho com folhas" />
       </div>
     </main>
     <footer>
       <ul>
         <li>
-          Endereço: Rua Monte Alegre, 127 – Santo Antônio – São Caetano do Sul –
+          Endereço: Rua Monte Alegre, 134 – Santo Antônio – São Caetano do Sul –
           São Paulo
         </li>
         <li><a href="#">mais promoçoes</a></li>
         <li><a href="#"> conheça nosso Blog</a></li>
         <li>
           <span>Nos encontre por aqui</span>
-          <img src="./img/facebook.png" alt="" />
-          <img src="./img/instagram.png" alt="" />
-          <img src="./img/twitter.png" alt="" />
-          <img src="./img/whatsapp.png" alt="" />
+          <img src="./img/facebook.png" alt="icone de facebook" />
+          <img src="./img/instagram.png" alt="icone de instagram" />
+          <img src="./img/twitter.png" alt="icone de twitter" />
+          <img src="./img/whatsapp.png" alt="icone de whatsapp" />
         </li>
       </ul>
       <p>&copy;2022- Todos direitos reservados</p>
