--- a/gallery.html
+++ b/gallery.html
@@ -16,8 +16,9 @@
         <!-- logo do site -->
         <div id="container-header">
           <a id="logo" href="./index.html">
-            <img src="./img/logo.png" alt="" />
+            <img src="./img/logo.png" alt="logo" />
           </a>
+          <h2>Quintal das Flores</h2>
 
           <!-- inicio menu -->
           <nav id="nav-header">
@@ -93,7 +94,8 @@
             <h2>R$ 99,99</h2>
           </div>
           <div>
-            <img src="./img/foto7.png" alt="imagem de um Boquê de 20 Rosas" />
+            <img src="./img/foto7.png" 
+                alt="imagem de um Boquê de 20 Rosas" />
             <h5>Buquê de 20 Rosas</h5>
             <h3>R$ 149,99</h3>
             <h2>R$ 89,99</h2>
@@ -128,7 +130,7 @@
           <div>
             <img
               src="./img/foto11.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de Ramalhetes de Flores do Campo"
             />
             <h5>Ramalhetes de Flores do Campo</h5>
             <h3>R$ 219,99</h3>
@@ -137,7 +139,7 @@
           <div>
             <img
               src="./img/foto12.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de Buquê grande de Flores"
             />
             <h5>Buquê grande de Flores</h5>
             <h3>R$ 59,99</h3>
@@ -146,61 +148,61 @@
           <div>
             <img
               src="./img/foto13.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="Buquê de 5 rosas"
             />
-            <h5>Boquê de 5 rosas</h5>
+            <h5>Buquê de 5 rosas</h5>
             <h3>R$ 39,99</h3>
             <h2>R$ 19,99</h2>
           </div>
           <div>
             <img
               src="./img/foto14.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de Buquê de Astromélias"
             />
-            <h5>Boquê de Astromélias</h5>
+            <h5>Buquê de Astromélias</h5>
             <h3>R$ 59,99</h3>
             <h2>R$ 29,99</h2>
           </div>
           <div>
             <img
               src="./img/foto15.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de Buquê de Girassóis"
             />
-            <h5>Boquê de Girassóis</h5>
+            <h5>Buquê de Girassóis</h5>
             <h3>R$ 69,99</h3>
             <h2>R$ 39,99</h2>
           </div>
           <div>
             <img
               src="./img/foto16.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de Buquê com 26 Rosas de 3 Cores"
             />
-            <h5>Boquê com 26 Rosas de 3 Cores</h5>
+            <h5>Buquê com 26 Rosas de 3 Cores</h5>
             <h3>R$ 119,99</h3>
             <h2>R$ 89,99</h2>
           </div>
           <div>
             <img
               src="./img/foto17.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de Buquê com 16 Rosas de 4 Cores"
             />
-            <h5>Boquê com 16 Rosas de 4 Cores</h5>
+            <h5>Buquê com 16 Rosas de 4 Cores</h5>
             <h3>R$ 99,99</h3>
             <h2>R$ 79,99</h2>
           </div>
           <div>
             <img
               src="./img/foto18.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de Buquê de 7 Rosas Rosadas"
             />
-            <h5>Boquê de 7 Rosas Rosadas</h5>
+            <h5>Buquê de 7 Rosas Rosadas</h5>
             <h3>R$ 59,99</h3>
             <h2>R$ 39,99</h2>
           </div>
           <div>
             <img
               src="./img/foto19.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de uma Cesta de Flores do Campo"
             />
             <h5>Cesta de Flores do Campo</h5>
             <h3>R$ 139,99</h3>
@@ -209,7 +211,7 @@
           <div>
             <img
               src="./img/foto20.png"
-              alt="imagem de uma Cesta de Lirios, Gerberas Brancas"
+              alt="imagem de um Arranjo de Lirios"
             />
             <h5>Arranjo de Lirios</h5>
             <h3>R$ 89,99</h3>
@@ -221,10 +223,10 @@
     <footer>
       <ul>
         <li>
-          Endereço: Rua Monte Alegre, 127 – Santo Antônio – São Caetano do Sul –
+          Endereço: Rua Monte Alegre, 134 – Santo Antônio – São Caetano do Sul –
           São Paulo
         </li>
-        <li><a href="#">mais promoçoes</a></li>
+        <li><a href="#">mais promoções</a></li>
         <li><a href="#"> conheça nosso Blog</a></li>
         <li>
           <span>Nos encontre por aqui:</span>
