--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
           <a id="logo" href="./index.html">
             <img src="./img/logo.png" alt="logo" />
           </a>
-          <h2>Quintal das Flores</h2>
+          <h2>Floresce</h2>
 
           <!-- inicio menu -->
           <nav id="nav-header">
@@ -94,8 +94,7 @@
             <h2>R$ 99,99</h2>
           </div>
           <div>
-            <img src="./img/foto7.png" 
-                alt="imagem de um Boquê de 20 Rosas" />
+            <img src="./img/foto7.png" alt="imagem de um Boquê de 20 Rosas" />
             <h5>Buquê de 20 Rosas</h5>
             <h3>R$ 149,99</h3>
             <h2>R$ 89,99</h2>
@@ -146,28 +145,19 @@
             <h2>R$ 39,99</h2>
           </div>
           <div>
-            <img
-              src="./img/foto13.png"
-              alt="Buquê de 5 rosas"
-            />
+            <img src="./img/foto13.png" alt="Buquê de 5 rosas" />
             <h5>Buquê de 5 rosas</h5>
             <h3>R$ 39,99</h3>
             <h2>R$ 19,99</h2>
           </div>
           <div>
-            <img
-              src="./img/foto14.png"
-              alt="imagem de Buquê de Astromélias"
-            />
+            <img src="./img/foto14.png" alt="imagem de Buquê de Astromélias" />
             <h5>Buquê de Astromélias</h5>
             <h3>R$ 59,99</h3>
             <h2>R$ 29,99</h2>
           </div>
           <div>
-            <img
-              src="./img/foto15.png"
-              alt="imagem de Buquê de Girassóis"
-            />
+            <img src="./img/foto15.png" alt="imagem de Buquê de Girassóis" />
             <h5>Buquê de Girassóis</h5>
             <h3>R$ 69,99</h3>
             <h2>R$ 39,99</h2>
@@ -209,10 +199,7 @@
             <h2>R$ 99,99</h2>
           </div>
           <div>
-            <img
-              src="./img/foto20.png"
-              alt="imagem de um Arranjo de Lirios"
-            />
+            <img src="./img/foto20.png" alt="imagem de um Arranjo de Lirios" />
             <h5>Arranjo de Lirios</h5>
             <h3>R$ 89,99</h3>
             <h2>R$ 59,99</h2>
