--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=0" />
-    <title>Quintal das Flores</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Floresce</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/keyframes.css" />
@@ -20,7 +20,7 @@
             <img src="./img/logo.png" alt="Logo" />
           </a>
 
-          <h2>Quintal das Flores</h2>
+          <h2>Floresce</h2>
           <!-- inicio menu -->
           <nav id="nav-header">
             <ul>
@@ -39,9 +39,9 @@
         <article>
           <h1>Qual o nosso diferencial?</h1>
           <p>
-            A Quintal das Flores é uma floricultura com mais de 5 anos de experiência no
+            A Floresce é uma floricultura com mais de 5 anos de experiência no
             mercado de flores. Com grande excelência no cultivo e manuseio, a
-            Quintal das Flores é uma empresa especializada no plantio, desenvolvimento e
+            Floresce é uma empresa especializada no plantio, desenvolvimento e
             comercialização das melhores e até mais raras flores do mercado.
           </p>
         </article>
@@ -54,7 +54,7 @@
           <h2>Nossos Valores</h2>
           <p>
             Com grande experiência no cultivo e desenvolvimento de novas
-            tecnologias na área do plantio a Quintal das Flores é uma empresa
+            tecnologias na área do plantio a Floresce é uma empresa
             especializada no desenvolvimento e comercialização de todos os tipos
             de flores.
           </p>
