--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery</title>
+    <title>Galeria</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/keyframes.css" />
