--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Floricultura Floresce" />
+    <meta property="og:type" content="site" />
+    <meta property="og:url" content="https://lis-flores.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://ia.media-imdb.com/images/rock.jpg"
+    />
     <title>Floresce</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
