--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,10 +7,7 @@
     <meta property="og:title" content="Floricultura Floresce" />
     <meta property="og:type" content="site" />
     <meta property="og:url" content="https://lis-flores.vercel.app/" />
-    <meta
-      property="og:image"
-      content="https://ia.media-imdb.com/images/rock.jpg"
-    />
+    <meta property="og:image" content="./img/banner.jpg" />
     <title>Floresce</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
