--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta property="og:title" content="Floricultura Floresce" />
     <meta property="og:type" content="site" />
     <meta property="og:url" content="https://lis-flores.vercel.app/" />
-    <meta property="og:image" content="./img/banner.jpg" />
+    <meta
+      property="og:image"
+      content="https://www.google.com/imgres?imgurl=https%3A%2F%2Fs2.glbimg.com%2FTdO0R9jabSrXS6OkSYi4ds5l37M%3D%2F620x455%2Fe.glbimg.com%2Fog%2Fed%2Ff%2Foriginal%2F2020%2F01%2F20%2Fginkgo_-_fotos_12.jpg&imgrefurl=https%3A%2F%2Frevistacasaejardim.globo.com%2FCasa-e-Jardim%2FViagem%2FPoe-no-Mapa%2Fnoticia%2F2020%2F01%2Fprojeto-que-une-cafeteria-e-floricultura-valoriza-travessa-de-porto-alegre.html&tbnid=bqpf0MLB3YQvPM&vet=12ahUKEwiwq8aLhq_7AhXqH7kGHflpBmoQMygWegUIARD1AQ..i&docid=xFwc21tEWonYSM&w=620&h=455&q=entrada%20floricultura&ved=2ahUKEwiwq8aLhq_7AhXqH7kGHflpBmoQMygWegUIARD1AQ"
+    />
     <title>Floresce</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
