--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
       property="og:description"
       content="Conheça a melhor floricultura do Brasil."
     />
-    <meta property="og:type" content="site" />
-    <meta property="og:url" content="https://lis-flores.vercel.app/" />
-    <meta property="og:image" content="banner.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lis-flores.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://lis-flores.vercel.app/banner.png"
+    />
     <title>Floresce</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
     <link rel="stylesheet" href="styles/style.css" />
