--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://lis-flores.vercel.app" />
     <meta
       property="og:image"
-      content="https://lis-flores.vercel.app/banner.png"
+      content="https://lis-flores.vercel.app/img/banner.jpg"
     />
     <title>Floresce</title>
     <link rel="shortcut icon" href="./ico/favicon.ico" type="image/png" />
