--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <!-- inicio menu -->
           <nav id="nav-header">
             <ul>
-              <li class="active"><a href="./index.html">Home</a></li>
+              <li class="active"><a href="./index.html">Início</a></li>
               <li><a href="./gallery.html">Galeria</a></li>
             </ul>
           </nav>
