--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
           <!-- inicio menu -->
           <nav id="nav-header">
             <ul>
-              <li><a href="./index.html">Home</a></li>
+              <li><a href="./index.html">Início</a></li>
               <li><a href="./gallery.html">Galeria</a></li>
             </ul>
           </nav>
